--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,11 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+/reports
 
 # System files
 .DS_Store
 Thumbs.db
+
+# stryker temp files
+.stryker-tmp
