--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest"
+    "test": "jest",
+    "test:mutation": "stryker run"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +27,8 @@
     "@angular-devkit/build-angular": "^14.2.4",
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
+    "@stryker-mutator/core": "^6.2.2",
+    "@stryker-mutator/jest-runner": "^6.2.2",
     "@types/jest": "^29.1.1",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.2",
