--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@stryker-mutator/core": "^6.2.2",
     "@stryker-mutator/jest-runner": "^6.2.2",
+    "@stryker-mutator/typescript-checker": "^6.2.2",
     "@types/jest": "^29.1.1",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.2",
